--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-matplotlib==3.5.1  # For plotting and visualizations
-unittest2==1.1.0   # If you're using unittest2 for test cases (optional)
+# Core
+python>=3.10
+matplotlib>=3.7
+pytest>=7.4
+
+# Optional but useful in many environments
+typing_extensions>=4.8
+
+# No heavy NLP dependencies required for the lexicon-based baseline
